--- a/JavaWebApp/pom.xml
+++ b/JavaWebApp/pom.xml
@@ -10,12 +10,13 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>JavaWebApp</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>JavaWebApp</name>
 	<description>JavaWebApp project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.scanner.force-deprecated-java-version>true</sonar.scanner.force-deprecated-java-version>
 	</properties>
 
 	<dependencies>
@@ -43,6 +44,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<!--plugin>
+			  <groupId>org.codehaus.sonar</groupId>
+			  <artifactId>sonar-maven-plugin</artifactId>
+			  <version>2.5</version>
+		     	</plugin-->
 			<!--plugin>
    				<groupId>org.apache.maven.plugins</groupId>
    				<artifactId>maven-deploy-plugin</artifactId>
@@ -54,11 +61,11 @@
 	<distributionManagement>
     <snapshotRepository>
       <id>nexusdeploymentrepo</id>
-      <url>http://3.94.55.26:8081/repository/maven-snapshots/</url> <!-- Update the IP/Address to Your Nexus VM IP -->
+      <url>http://172.31.21.115:8081/repository/maven-java-webapp-repository/</url> <!-- Update the IP/Address to Your Nexus VM IP -->
     </snapshotRepository>											  <!-- Mmake sure to create the "maven-snapshots" repo in Nexus -->
 	<repository>
 	  <id>nexusdeploymentrepo</id>
-      <url>http://3.94.55.26:8081/repository/maven-releases/</url> <!-- Update the IP/Address to Your Nexus VM IP -->
+      <url>http://172.31.21.115:8081/repository/maven-java-webapp-repository/</url> <!-- Update the IP/Address to Your Nexus VM IP -->
     </repository>													 <!-- Also make sure you have the above two or one repositories created -->
   
   </distributionManagement>
